--- a/templates/play.html
+++ b/templates/play.html
@@ -7,8 +7,22 @@
 {% endblock %}
 {% block script %}
 <script src="{% static 'js/jquery-3.2.1.min.js' %}"></script>
+{% csrf_token %}
 <script>
   window.addEventListener("message", receiveGameMessage);
+
+  var csrftoken = jQuery("[name=csrfmiddlewaretoken]").val();
+
+  function csrfSafeMethod(method) {
+    return (/^(GET|HEAD|OPTIONS|TRACE)$/.test(method));
+  }
+  $.ajaxSetup({
+      beforeSend: function(xhr, settings) {
+          if (!csrfSafeMethod(settings.type) && !this.crossDomain) {
+              xhr.setRequestHeader("X-CSRFToken", csrftoken);
+          }
+      }
+  });
 
   function receiveGameMessage(event) {
     console.log(event.data);
